<resources>
    <string name="app_name">Store</string>
    <string name="download">下载</string>
    <string name="downloading">下载中</string>
    <string name="re_down">重新下载</string>
    <string name="update">更新</string>
    <string name="install">安装</string>
    <string name="open">打开</string>
    <string name="down_failed">下载失败</string>
    <string name="load_error">加载失败，请重新加载</string>
    <string name="over_order">你的任务都完成啦</string>
    <string name="delete">删除</string>
    <string name="download_manager">下载管理</string>
    <string name="rating_count">%1$s人评分</string>
    <string name="more_title">@string/app_name</string>
    <string name="not_more_data">没有更多的数据了</string>
    <string name="get_data_failed">获取数据失败</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="not_detail">暂无该应用的详情</string>
    <string name="new_features">新特性</string>
    <string name="already_install">应用都已经安装过啦</string>
    <string name="was_install">已经安装过啦</string>
    <string name="ready_install">准备安装</string>
    <string name="installing">正在准备安装…</string>
    <string name="store_one_key_install">一键安装</string>
    <string name="downloading_new_apps">正在下载最新应用…</string>
    <string name="hot_most">最热应用</string>
    <string name="hot_search">热搜应用</string>
    <string name="search_result">搜索结果</string>
    <string name="all">全部</string>
    <string name="click_down">点击下载</string>
    <string name="simultaneously_install_new_app">同时安装最新版本应用</string>
    <string name="detail_info">详情信息</string>
    <string name="app_pkg_name">应用包名</string>
    <string name="update_time">更新时间</string>
    <string name="support_rom">支持ROM</string>
    <string name="developer">开发者</string>
    <string name="look_look"><![CDATA[立即查看>>]]></string>
    <string name="wifi_ok">WIFI连接成功</string>
    <string name="into_more"><![CDATA[>>进入市场逛逛]]></string>
    <string name="find_app">系统提示发现一个有趣的软件！</string>
    <string name="other_down">的用户搜索该词后下载</string>
</resources>
