<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_wifi_ad"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/wifi_ok"
            android:textColor="#333333"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e4e4e4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/wifi_ad_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/wifi_ad_one_key"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/tv_bg_down"
            android:gravity="center"
            android:text="@string/store_one_key_install"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wifi_goto_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/into_more"
            android:textColor="#333333"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/wifi_ad_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/close" />
</RelativeLayout>