<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/BlackMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_most" />

        <LinearLayout
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hot" />

            <TextView
                style="@style/BlackMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/all" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/open_more" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_gravity="center"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/appName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:maxWidth="55dp"
                android:singleLine="true"
                android:text="@string/click_down"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_gravity="center"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/appName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:maxWidth="55dp"
                android:singleLine="true"
                android:text="@string/click_down"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_gravity="center"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/appName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:maxWidth="55dp"
                android:singleLine="true"
                android:text="@string/click_down"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_gravity="center"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/appName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:maxWidth="55dp"
                android:singleLine="true"
                android:text="@string/click_down"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>